--- a/css/style.css
+++ b/css/style.css
@@ -861,6 +861,12 @@
     width: 80px;
     height: 76px;
     opacity: 1; }
+  .wrapper--video-button:hover svg {
+    fill: #c7b299;
+    cursor: pointer; }
+
+.video-play-btn--hide {
+  display: none; }
 
 @font-face {
   font-family: 'montserratbold';
