--- a/scss/video.scss
+++ b/scss/video.scss
@@ -70,4 +70,15 @@
         height: 76px;
         opacity: 1;
     }
+
+    &:hover {
+        svg {
+            fill: $hover-color;
+            cursor: pointer;
+        }
+    }
+}
+
+.video-play-btn--hide {
+    display: none;
 }
