--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -24,6 +24,14 @@
 .waxom-preview {
     width: 258px;
     margin: 0 40px 0 0;
+
+    &:hover .waxom-preview__text {
+        color: #ffffff;
+    }
+
+    &:hover .waxom-preview__link {
+        color: $hover-color;
+    }
 }
 
 .waxom-preview__text {
@@ -66,6 +74,10 @@
 
         top: 3px;
         left: 83px;
+    }
+
+    &:active {
+        opacity: 0.5;
     }
 }
 
@@ -140,6 +152,11 @@
     }
     &:hover .footer-posts__text {
         color: #c7b299;
+    }
+
+    &:active .footer-posts__time,
+    &:active .footer-posts__text{
+        opacity: 0.5;
     }
 }
 
@@ -222,6 +239,11 @@
     &:hover .footer-twitter__text {
         color: #c7b299;
     }
+
+    &:active .footer-twitter__time,
+    &:active .footer-twitter__text {
+        opacity: 0.5;
+    }
 }
 
 
@@ -253,7 +275,31 @@
 }
 
 .widgets__link {
+    display: block;
     margin: 0 0 10px 0;
+
+    position: relative;
+
+    &:hover .widgets-hover {
+        display: block;
+    }
+
+    &:active {
+        opacity: 0.5;
+    }
+}
+
+.widgets-hover {
+    display: none;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 130px;
+    height: 98px;
+
+    background-color: rgba(17, 17, 17, 0.7);
 }
 
 .widgets__pic {
