--- a/css/features.css
+++ b/css/features.css
@@ -61,7 +61,7 @@
   width: 1230px;
   list-style: none;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0 auto;
   padding: 0 30px 0 30px; }
 
@@ -69,6 +69,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0 88px 0 0;
   font-family: "montserratregular";
   font-size: 48px;
   font-weight: 400;
@@ -77,6 +78,8 @@
   line-height: 36px;
   text-align: center;
   color: #ffffff; }
+  .features__item:last-child {
+    margin: 0; }
   .features__item svg {
     fill: #c7b299;
     margin: 0 0 30px 0; }
