--- a/css/projects.css
+++ b/css/projects.css
@@ -74,14 +74,12 @@
     font-weight: 300;
     color: #8c8c8c; }
   .projects a {
-    margin: 0 auto;
-    width: max-content; }
+    margin: 0 auto; }
 
 .projects-filter__list {
   list-style: none;
   display: flex;
-  width: 757px;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box; }
@@ -91,9 +89,11 @@
   border-radius: 3px;
   outline: none;
   background-color: #ffffff;
-  padding: 10px 25px;
-  margin: 0 0 40px 0;
+  padding: 5px 20px;
+  margin: 0 10px 40px 0;
   box-sizing: border-box;
+  width: max-content;
+  text-align: center;
   font-family: "montserratlight";
   font-size: 14px;
   line-height: 21px;
