--- a/scss/features.scss
+++ b/scss/features.scss
@@ -17,7 +17,7 @@
     width: $container;
     list-style: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin: 0 auto;
     padding: 0 30px 0 30px;
 }
@@ -26,6 +26,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    margin: 0 88px 0 0;
+
+    &:last-child {
+        margin: 0;
+    }
 
     font-family: "montserratregular";
     font-size: 48px;
