--- a/scss/header.scss
+++ b/scss/header.scss
@@ -52,13 +52,11 @@
 
     .main-logo-svg {
         fill: #ffffff;
-        &:hover {
-           // fill: #c7b299;
-        }
-        &:active {
-           // opacity: 0.5;
-        }
     }
+}
+
+.burger-menu, #burger-menu {
+    display: none;
 }
 
 .main-nav {
@@ -258,7 +256,7 @@
 
 .pagination {
     width: 100%;
-    margin: 300px auto 0 auto;
+    margin: 327px auto 0 auto;
     padding: 0;
     box-sizing: border-box;
     display: flex;
@@ -296,5 +294,82 @@
         background-color: transparent;
         border: 2px solid #d3c1ad;
         transform: scale(1.2);
+    }
+}
+
+@media (min-width: 320px) and (max-width: 576px) {
+    .main-header {
+        width: 100%;
+        padding: 0 30px;
+        background-size: cover;
+        background-position: center;
+    }
+
+    .header-nav {
+        width: 100%;
+        padding: 40px 0;
+        margin: 0;
+        flex-wrap: wrap;
+    }
+
+    .burger-menu {
+        display: block;
+        span {
+            display: block;
+            margin: 7px 0;
+            width: 50px;
+            height: 4px;
+            background-color: $background-color;
+        }
+        &::before {
+            content: "";
+            display: block;
+            width: 50px;
+            height: 4px;
+            background-color: $background-color;
+        }
+        &::after {
+            content: "";
+            display: block;
+            width: 50px;
+            height: 4px;
+            background-color: $background-color;
+        }
+    }
+
+    .main-nav {
+        visibility: hidden;
+        height: 0px;
+    }
+
+    input[type="checkbox"]:checked ~ .main-nav {
+        visibility: visible;
+        height: auto;
+        width: 100%;
+        margin: 20px 0 0 0;
+    }
+
+    .main-nav__list {
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    .main-nav__item {
+        width: 100%;
+        background-color: $font-color;
+        border-bottom: 3px solid black;
+    }
+
+    .main-nav__link {
+        padding: 20px 0;
+        text-align: center;
+    }
+    .slider {
+        display: none;
+    }
+
+    .header__form, 
+    .cart {
+        display: none;
     }
 }
