--- a/scss/posts.scss
+++ b/scss/posts.scss
@@ -38,15 +38,21 @@
 .posts__wrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     margin: 0 0 40px 0;
 }
 
 .post {
     width: 370px;
     border: 1px solid #f8f8f8;
+    margin: 0 30px 0 0;
+    //box-sizing: border-box;  из-за этого свойства картинка выузжает из блока на 2 пикселя
 
     position: relative;
+
+    &:last-child {
+        margin: 0;
+    }
 
     &:hover {
         background-color: #362f2d;
@@ -135,6 +141,7 @@
         margin: 0 0 30px 0;
         width: 370px;
         height: 220px;
+        box-sizing: border-box;
     }
 }
 
