--- a/scss/projects.scss
+++ b/scss/projects.scss
@@ -34,15 +34,14 @@
 
     a {
         margin: 0 auto;
-        width: max-content;
     }
 }
 
 .projects-filter__list {
     list-style: none;
     display: flex;
-    width: 757px;
-    justify-content: space-between;
+    //width: 757px;
+    justify-content: center;
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
@@ -53,9 +52,12 @@
     border-radius: 3px;
     outline: none;
     background-color: #ffffff;
-    padding: 10px 25px;
-    margin: 0 0 40px 0;
+    padding: 5px 20px;
+    margin: 0 10px 40px 0;
     box-sizing: border-box;
+
+    width: max-content;
+    text-align: center;
 
     font-family: "montserratlight";
     font-size: 14px;
