--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,6 +26,12 @@ body {
             box-sizing: border-box;
 }
 
+main {
+    width: 1920px;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
 a {
     text-decoration: none;
 }
@@ -55,7 +61,9 @@ html {
 .button {
     background-color: $background-color--buton;
     display: block;
-    padding: 20px 50px;
+    box-sizing: border-box;
+    width: 170px;
+    padding: 14px;
     border-radius: 3px;
 
     font-family: "raleway-bold";
@@ -64,6 +72,7 @@ html {
     font-weight: 700;
     color: $background-color;
     text-transform: uppercase;
+    text-align: center;
 
     &:hover {
         background-color: $hover-color;
@@ -72,3 +81,4 @@ html {
         opacity: 0.5;
     }
 }
+
