--- a/scss/benefits.scss
+++ b/scss/benefits.scss
@@ -68,3 +68,19 @@
         background-color: $hover-color;
     }
 }
+
+@media (min-width: 320px) and (max-width: 576px) {
+    .benefits {
+        width: 100%;
+        padding: 20px 30px;
+    }
+    
+    .benefits__list {
+        flex-wrap: wrap;
+    }
+
+    .benefits__item {
+        width: 248px;
+        margin: 0 0 20px 0;
+    }
+}
