--- a/css/style.css
+++ b/css/style.css
@@ -834,9 +834,6 @@
     transform: scale(1.2); }
 
 @media (min-width: 320px) and (max-width: 576px) {
-  .aside {
-    display: none; }
-
   .projects {
     width: 100%;
     padding: 20px 30px; }
@@ -967,6 +964,9 @@
 .video-play-btn--hide {
   display: none; }
 
+@media (min-width: 320px) and (max-width: 576px) {
+  .bg-video {
+    display: none; } }
 @font-face {
   font-family: 'montserratbold';
   src: url("../fonts/montserrat-bold-webfont.woff2") format("woff2"), url("../fonts/montserrat-bold-webfont.woff") format("woff");
@@ -1073,6 +1073,21 @@
     border: none;
     outline: none; }
 
+@media (min-width: 320px) and (max-width: 576px) {
+  .details {
+    width: 100%;
+    padding: 20px 30px;
+    background-size: contain; }
+
+  .details__title,
+  .details__text {
+    width: 100%;
+    text-align: center; }
+
+  .details__list {
+    width: 100%;
+    text-align: left;
+    margin: 0 0 0 5%; } }
 @font-face {
   font-family: 'montserratbold';
   src: url("../fonts/montserrat-bold-webfont.woff2") format("woff2"), url("../fonts/montserrat-bold-webfont.woff") format("woff");
@@ -1899,6 +1914,9 @@ html {
 
 @media (min-width: 320px) and (max-width: 576px) {
   main {
-    width: 100%; } }
+    width: 100%; }
+
+  .aside {
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
