--- a/css/video.css
+++ b/css/video.css
@@ -113,4 +113,8 @@
 .video-play-btn--hide {
   display: none; }
 
+@media (min-width: 320px) and (max-width: 576px) {
+  .bg-video {
+    display: none; } }
+
 /*# sourceMappingURL=video.css.map */
