--- a/scss/details.scss
+++ b/scss/details.scss
@@ -62,3 +62,25 @@
         outline: none;
     }
 }
+
+@media (min-width: 320px) and (max-width: 576px) {
+    .details {
+        width: 100%;
+        padding: 20px 30px;
+        background-size: contain;
+        //background-blend-mode: screen;
+    }
+
+
+    .details__title,
+    .details__text {
+        width: 100%;
+        text-align: center;
+    }
+
+    .details__list {
+        width: 100%;
+        text-align: left;
+        margin: 0 0 0 5%;
+    }
+}
