--- a/css/features.css
+++ b/css/features.css
@@ -61,6 +61,7 @@
   width: 1230px;
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin: 0 auto;
   padding: 0 30px 0 30px; }
@@ -101,5 +102,20 @@
     height: 2px;
     background-color: #ffffff;
     box-sizing: border-box; }
+
+@media (min-width: 320px) and (max-width: 576px) {
+  .features {
+    width: 100%;
+    padding: 20px 30px 0 30px; }
+
+  .features__list {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    justify-content: space-evenly; }
+
+  .features__item {
+    margin: 0 30px 30px 0; } }
 
 /*# sourceMappingURL=features.css.map */
