--- a/css/features.css
+++ b/css/features.css
@@ -116,6 +116,7 @@
     justify-content: space-evenly; }
 
   .features__item {
-    margin: 0 30px 30px 0; } }
+    width: calc(100% / 3);
+    margin: 0 0 30px 0; } }
 
 /*# sourceMappingURL=features.css.map */
