--- a/css/style.css
+++ b/css/style.css
@@ -1206,7 +1206,8 @@
     justify-content: space-evenly; }
 
   .features__item {
-    margin: 0 30px 30px 0; } }
+    width: calc(100% / 3);
+    margin: 0 0 30px 0; } }
 @font-face {
   font-family: 'montserratbold';
   src: url("../fonts/montserrat-bold-webfont.woff2") format("woff2"), url("../fonts/montserrat-bold-webfont.woff") format("woff");
@@ -1261,7 +1262,8 @@
 .posts {
   width: 1230px;
   margin: 0 auto;
-  padding: 80px 30px; }
+  padding: 80px 30px;
+  box-sizing: border-box; }
 
 .posts__title {
   color: #555555;
@@ -1272,6 +1274,7 @@
   letter-spacing: normal;
   line-height: normal;
   text-align: center;
+  box-sizing: border-box;
   margin: 0 auto 30px auto; }
 
 .posts__text {
@@ -1436,6 +1439,20 @@
     .posts__controls .control-next:active svg {
       opacity: 0.5; }
 
+@media (min-width: 320px) and (max-width: 576px) {
+  .posts {
+    width: 100%;
+    padding: 20px 30px; }
+
+  .posts__text {
+    width: 100%;
+    box-sizing: border-box; }
+
+  .post {
+    margin: 0 0 20px 0; }
+
+  .posts__controls {
+    display: none; } }
 @font-face {
   font-family: 'montserratbold';
   src: url("../fonts/montserrat-bold-webfont.woff2") format("woff2"), url("../fonts/montserrat-bold-webfont.woff") format("woff");
