--- a/scss/features.scss
+++ b/scss/features.scss
@@ -87,6 +87,7 @@
     }
 
     .features__item {
-        margin: 0 30px 30px 0;
+        width: calc(100% / 3);
+        margin: 0 0 30px 0;
     }
 }
