мобильная версия блока partners

--- a/css/style.css
+++ b/css/style.css
@@ -1530,6 +1530,18 @@
   .partners__link:active {
     opacity: 0.5; }
 
+@media (min-width: 320px) and (max-width: 576px) {
+  .partners {
+    width: 100%;
+    padding: 20px 30px;
+    background-size: cover; }
+
+  .partners__list {
+    width: 100%;
+    padding: 0; }
+
+  .partners__link {
+    margin: 0 0 20px 0; } }
 @font-face {
   font-family: 'montserratbold';
   src: url("../fonts/montserrat-bold-webfont.woff2") format("woff2"), url("../fonts/montserrat-bold-webfont.woff") format("woff");
