--- a/css/partners.css
+++ b/css/partners.css
@@ -75,4 +75,17 @@
   .partners__link:active {
     opacity: 0.5; }
 
+@media (min-width: 320px) and (max-width: 576px) {
+  .partners {
+    width: 100%;
+    padding: 20px 30px;
+    background-size: cover; }
+
+  .partners__list {
+    width: 100%;
+    padding: 0; }
+
+  .partners__link {
+    margin: 0 0 20px 0; } }
+
 /*# sourceMappingURL=partners.css.map */
