мобильная версия подвала

--- a/css/style.css
+++ b/css/style.css
@@ -1831,6 +1831,7 @@
   padding: 45px 30px 52px 30px;
   box-sizing: border-box;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   color: #ffffff; }
 
@@ -1962,5 +1963,20 @@ html {
 
   .aside {
     display: none; } }
+@media (min-width: 320px) and (max-width: 576px) {
+  .main-footer__content {
+    display: none; }
+
+  .main-footer__bottom {
+    width: 100%;
+    padding: 20px 30px; }
+
+  .main-footer__bottom-wrapper {
+    width: 100%;
+    padding: 0;
+    justify-content: center; }
+
+  .main-footer__policy-list {
+    margin: 0 0 20px 0; } }
 
 /*# sourceMappingURL=style.css.map */
