--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -327,6 +327,7 @@
     box-sizing: border-box;
 
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 
     color: #ffffff;
