--- a/css/footer.css
+++ b/css/footer.css
@@ -287,6 +287,7 @@
   padding: 45px 30px 52px 30px;
   box-sizing: border-box;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   color: #ffffff; }
 
